feat: updated swagger and added some services and handlers
