# api/generated/oas_response_encoders_gen.go
@@ -65,7 +65,37 @@ func encodeGetBlockchainPoolStatsResponse(response PoolStats, w http.ResponseWri
 	return nil
 }
 
-func encodePoolsResponse(response []PoolBlockchain, w http.ResponseWriter) error {
+func encodeGetBlockchainPriceResponse(response *BlockchainCoinPrice, w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
+func encodeGetBlockchainsResponse(response []Blockchain, w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	e.ArrStart()
+	for _, elem := range response {
+		elem.Encode(e)
+	}
+	e.ArrEnd()
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
+func encodeGetPricesResponse(response []CoinPrice, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
 
